--- a/cloud/aws-emr/cf-templates/template-new.yaml
+++ b/cloud/aws-emr/cf-templates/template-new.yaml
@@ -4,55 +4,54 @@ Description: Cloudformation Template to spin up Variant Spark on EMR clusters V3
 Parameters:
   # Random-Forest Parameters Group
   NumTree:
-    Description: (-rn) Number of trees to built.
+    Description: (-rn) Number of trees to built in the forest.
     Type: Number
     Default: "100"
   mtry:
-    Description: (-rmt) Number of Randomly selected variable to test at each node of each tree.
+    Description: (-rmt) Number of randomly selected variable to test at each node of each tree. Should not be used with mtryFraction.
     Type: Number
     Default: "1000"
   mtryFraction:
-    Description: (-rmtf) mtry as a fraction of number of variable in the input file.
+    Description: (-rmtf) mtry as a fraction of number of variable in the input file. Should not be used with mtry.
     Type: Number
     Default: "0.1"
-  #VariantSpark Parameters Group
-  rfBatchSize:
-    Description: (-rbs) Number of trees to be built in parallel
+  #VariantSpark Input Parameters Group
+  InputType:
+    Description: (-it) It can be VCF or CSV. The VCF file can be compressed using bzip2 (.vcf.bz2) or bgzip (.vcf.bgz). For the CSV file, the first row includes sample names and the first column includes variable names. All variable should be ordinal, descreet and starting from 0 like 0,1,2,3,...,n where n is a small number. If the input is VCF, VariantSpark translate 0/0, 0/1 and 1/1 genotypes to 0, 1 and 2 respectively and treat them as descreet ordinal values. VariantSpark ignore phasing information so 0/1, 1/0, 0|1 and 1|0 genotypes are all translated to 1. VariantSpark also ignore multiallelic genotype so 0/1, 0/3 and 2/3 genotypes are translated to 1, 1 and 2 respectively. So each variable can take only 3 different values (0,1,2).
+    Type: String
+    Default: "vcf"
+    AllowedValues:
+      - vcf
+      - csv
+  InputFile:
+    Description: (-if) S3 path to the input file. Can be in CSV or VCF format. See InputType parameter for more details. 
+    Type: String
+    Default: "s3://csiro-tb/share/Hipster2/VCF/Small.558938.vcf.bz2"
+  MaxValue:
+    Description: (-ivo) If the input is VCF leave it to default (3). See InputType parameter for more details. In case the input file is CSV, there could be a variable that takes more than 3 values. This parameter should be set to the maximum number of values a variable can take. For example if it is set to 6 (0,1,2,3,4,5) none of the variable can have value greater than 5.
     Type: Number
-    Default: "100"
+    Default: "3"
+  Biallelic:
+    Description: (-ivb) If the input file is VCF and multiallelic site are broken into biallelic site (two or more variants have the same chr-pos) you should set this option to True. When it is set to True the output file also include alternate allele for each variants. By default the output file only include chr-pos for each variant.
+    Type: String
+    Default: "False"
+    AllowedValues:
+      - "False"
+      - "True"
+  #VariantSpark Phenotype Parameters Group
   PhenotypeFile:
-    Description: (-ff) S3 path to phenotype file. It should be in CSV format. The first row in header, the first column is be sample name.
+    Description: (-ff) S3 path to phenotype file. It should be in CSV format. The first row is header, the first column should be sample names.
     Type: String
     Default: "s3://csiro-tb/share/Hipster2/Hipster.csv"
   PhenotypeColumn:
     Description: (-fc) The column name in the phenotype file that hold the phenotype value. Phenotype is binary and can be 0 (a control) or 1 (a case).
     Type: String
     Default: "Hipster"
-  InputFile:
-    Description: (-if) S3 path to the input file. Can be in CSV or VCF format. See InputType parameter for more details. 
-    Type: String
-    Default: "s3://csiro-tb/share/Hipster2/VCF/Small.558938.vcf.bz2"
-  InputType:
-    Description: (-it) It can be VCF or CSV. The VCF file can be compressed using bzip2 (x.vcf.bz2) or bgzip (x.vcf.bgz). For the CSV file the first row is sample name and the first column is the variable name. All Variable should be ordinal, descreet and starting from 0 like 0,1,2,3,...,n where n is a small number.
-    Type: String
-    Default: "vcf"
-    AllowedValues:
-      - vcf
-      - csv
-  MaxValue:
-    Description: (-ivo) If the input is VCF, VariantSpark translate 0/0, 0/1 and 1/1 genotypes to 0, 1 and 2 respectively and treat them as descreet ordinal values. Variant spark ignore phasing information so 0/1, 1/0, 0|1 and 1|0 genotypes are all translated to 1. VariantSpark also ignore multiallelic genotype so 0/1, 0/3 and 2/3 genotypes are translated to 1, 1 and 2 respectively. So each variable can take only 3 different values (0,1,2). In case the input file is CSV, there could be a variable that takes more than 3 values. This parameter should be set to the maximum number of values a variable can take. For example if it sets to 6 (0,1,2,3,4,5) none of the variable can have value greater than 5.
-    Type: Number
-    Default: "3"
+  #VariantSpark Output Parameters Group
   OutputFile:
     Description: (-of) S3 path to the output file (importance score)
     Type: String
-    #should not have a default value
     Default: "s3://csiro-tb/share/Hipster2/test-maciej1.out"
-  ModelFile:
-    Description: (-om) S3 path to the file. The program saves produced Random-Forest model in this file. For the file format see ModelType parameter
-    Type: String
-    #should not have a default value
-    Default: "s3://csiro-tb/share/Hipster2/test-maciej1.om"
   ModelType:
     Description: (??) The constructed Random-Forest model can be stored in java and json format. The json output is not optimised and may take a long time to produce. the java model file is only provided for programatic access.
     Type: String
@@ -60,13 +59,15 @@ Parameters:
     AllowedValues:
       - java
       - json
-  Biallelic:
-    Description: (-ivb) If input is VCF and multiallelic site are broken into biallelic site (two or more variants have the same chr-pos) you should set this option to True. If set to the true the output file also include alternate allele for each variants. By default the output file only include chr-pos for each variant.
+  ModelFile:
+    Description: (-om) S3 path to the file. The program saves produced Random-Forest model in this file. For the file format see ModelType parameter
     Type: String
-    Default: "False"
-    AllowedValues:
-      - "False"
-      - "True"
+    Default: "s3://csiro-tb/share/Hipster2/test-maciej1.om"
+  #VariantSpark Other Parameters Group
+  BatchSize:
+    Description: (-rbs) Number of trees to be built in parallel
+    Type: Number
+    Default: "100"
   OOB:
     Description: (-ro) Compute out-of-bag error rate for each batch of tree and the whole forest. If set to true slowdown the process. 
     Type: String
@@ -80,27 +81,42 @@ Parameters:
     Default: "13"
   # Hardware Group
   MasterNodePricing:
-    Description: Do you want master node EC2 instance with spot pricing or on-demand pricing.
+    Description: Choose the pricing option for master node EC2 instance with spot pricing or on-demand pricing. Spot is cheaper but the process may fail halfway through.
     Type: String
     Default: "Spot"
     AllowedValues:
       - Spot
       - OnDemand
   SpotNumCPU:
-    Description: Number of spot CPU for core instances. It is not the number of instances.
+    Description: Number of Spot CPUs for core instances. It is not the number of instances. Instances are AWS r4 EC2.
     Type: Number
     Default: "32"
   OnDemandNumCPU:
-    Description: Number of OnDemand CPU for core instances. It is not the number of instances.
+    Description: Number of OnDemand CPUs for core instances. It is not the number of instances. Instances are AWS r4 EC2.
     Type: Number
     Default: "0"
-  # Access:
+  # Security:
   EC2KeyPair:
-    Description: If you want to ssh to any node of the cluster you need to have a Ec+C2 Key Pair and use it for ssh. If you want to submit you job as step or you want to use Jupyter notebook you don't need to ssh to the master node. (see our brief tutorial on how to create EC2 Key Pair ???)
+    Description: You may need to assing an EC2 key pair in the folowing cases. If you want to ssh to any node of the cluster. How to create EC2 KeyPair -> https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ec2-key-pairs.html
     Type: AWS::EC2::KeyPair::KeyName
   SecurityGroup:
-    Description: If you want to ssh to the cluster or use the Jupyter notebook you should allow access to the cluster using security group. You don't need it if you submit you job as step. (see our brief tutorial on how to create security group ???)
+    Description: If you want to use Jupyter notebook or you want to ssh to any node of the cluster you should allow inbound connection from your IP address to the cluster. This can be done by using Security Group
     Type: AWS::EC2::SecurityGroup::Id
+  VPC:
+    Description: You may set it to your default VPC.
+    Type: AWS::EC2::VPC::Id
+  Subnet:
+    Description: You may set it to your default Subnet.
+    Type: AWS::EC2::Subnet::Id
+  #Jupyter Notebook
+  Port:
+    Description: The port for the Jupyter notebook.
+    Type: Number
+    Default: "8888"
+  NotebookDir:
+    Description: S3 path to notebook directory for the Jupyter notebook.
+    Type: String
+    Default: "s3://csiro-tb/notebooks/"
   #General EMR options
   clusterName:
     Description: Name of the cluster
@@ -137,13 +153,14 @@ Parameters:
     Default: "live"
   s3BucketBasePath:
     Description: Bucket to log EMR actions to
+    Default: "s3://csiro-tb/var/logs/emr/"
     Type: String
   taskBidPrice:
     Description: Bid price for Task nodes
     Type: String
     Default: "OnDemandPrice"
   terminationProtected:
-    Description: Is the cluster to have termination protection enabled
+    Description: Is the cluster to have termination protection enabled. If you set it to true, deleting this stack will not terminate the EMR cluster. You should manually terminate the cluster. 
     Type: String
     AllowedValues:
     - 'true'
@@ -160,33 +177,49 @@ Metadata:
   'AWS::CloudFormation::Interface': 
     ParameterGroups: 
       - Label: 
-          default: Random-Forest
+          default: Random-Forest parameters
         Parameters: 
           - NumTree
           - mtry
           - mtryFraction
       - Label: 
-          default: VariantSpark
+          default: VariantSpark input data
+        Parameters:
+          - InputType
+          - InputFile
+          - MaxValue
+          - Biallelic
+      - Label: 
+          default: VariantSpark phenotype data
         Parameters: 
           - PhenotypeFile
           - PhenotypeColumn
-          - InputFile
-          - InputType
-          - MaxValue
+      - Label: 
+          default: VariantSpark output data
+        Parameters: 
           - OutputFile
-          - ModelFile
           - ModelType
-          - rfBatchSize
-          - Biallelic
+          - ModelFile
+      - Label: 
+          default: VariantSpark others parameters
+        Parameters: 
+          - BatchSize
           - OOB
           - Seed
       - Label: 
-          default: Access To the Cluster
+          default: Access and Security (if needed)
         Parameters: 
           - EC2KeyPair
           - SecurityGroup
+          - VPC
+          - Subnet
+      - Label:
+          default: Jupyter notebook parameters
+        Parameters:
+          - Port
+          - NotebookDir
       - Label: 
-          default: Hardware
+          default: Cluster size and pricing
         Parameters: 
           - MasterNodePricing
           - SpotNumCPU
@@ -304,7 +337,7 @@ Resources:
           - "-rmtf"
           - Ref: mtryFraction
           - "-rbs"
-          - Ref: rfBatchSize
+          - Ref: BatchSize
           - "-ivo"
           - Ref: MaxValue
           - "-sr"
