Add more instances to core group

--- a/cloud/aws-emr/cf-templates/template-new.yaml
+++ b/cloud/aws-emr/cf-templates/template-new.yaml
@@ -191,6 +191,9 @@ Resources:
         CoreInstanceFleet:
           InstanceTypeConfigs:
           - InstanceType: "r4.2xlarge"
+          - InstanceType: "r4.4xlarge"
+          - InstanceType: "r4.8xlarge"
+          - InstanceType: "r4.16xlarge"
           Name: "Task fleet"
           TargetOnDemandCapacity:
             Ref: OnDemandNumCPU
