fix OOB and Biallelic. Add outputs

--- a/cloud/aws-emr/cf-templates/template-new.yaml
+++ b/cloud/aws-emr/cf-templates/template-new.yaml
@@ -6,7 +6,7 @@ Parameters:
   NumTree:
     Description: (-rn) Number of trees to built in the forest.
     Type: Number
-    Default: "100"
+    Default: "1000"
   mtryFraction:
     Description: (-rmtf) mtry as a fraction of number of variable in the input file. mtry is the umber of randomly selected variable to test at each node of each tree.
     Type: Number
@@ -30,10 +30,10 @@ Parameters:
   Biallelic:
     Description: (-ivb) If the input file is VCF and multiallelic site are broken into biallelic site (two or more variants have the same chr-pos) you should set this option to True. When it is set to True the output file also include alternate allele for each variants. By default the output file only include chr-pos for each variant.
     Type: String
-    Default: ""
+    Default: "True"
     AllowedValues:
-      - ""
-      - "-ivb"
+      - "False"
+      - "True"
   #VariantSpark Phenotype Parameters Group
   PhenotypeFile:
     Description: (-ff) S3 path to phenotype file. It should be in CSV format. The first row is header, the first column should be sample names.
@@ -48,15 +48,15 @@ Parameters:
     Description: (-of) S3 path to the output file (importance score)
     Type: String
     Default: "s3://csiro-tb/share/Hipster2/test-maciej1.out"
-  ModelType:
-    Description: (??) The constructed Random-Forest model can be stored in java and json format. The json output is not optimised and may take a long time to produce. the java model file is only provided for programatic access.
-    Type: String
-    Default: "java"
-    AllowedValues:
-      - java
-      - json
+  #ModelType:
+  #  Description: (??) The constructed Random-Forest model can be stored in java and json format. The json output is not optimised and may take a long time to produce. the java model file is only provided for programatic access.
+  #  Type: String
+  #  Default: "java"
+  #  AllowedValues:
+  #    - java
+  #    - json
   ModelFile:
-    Description: (-om) S3 path to the file. The program saves produced Random-Forest model in this file. For the file format see ModelType parameter
+    Description: (-om) S3 path to the file. The program saves produced Random-Forest model in this file. # For the file format see ModelType parameter
     Type: String
     Default: "s3://csiro-tb/share/Hipster2/test-maciej1.om"
   #VariantSpark Other Parameters Group
@@ -67,10 +67,10 @@ Parameters:
   OOB:
     Description: (-ro) Compute out-of-bag error rate for each batch of tree and the whole forest. If set to true slowdown the process. 
     Type: String
-    Default: ""
+    Default: "False"
     AllowedValues:
-      - ""
-      - "-ro"
+      - "False"
+      - "True"
   Seed:
     Description: (-sr) Random seed to be able to replicate the same process. 
     Type: Number
@@ -150,7 +150,7 @@ Metadata:
           default: VariantSpark output data
         Parameters: 
           - OutputFile
-          - ModelType
+          #- ModelType
           - ModelFile
       - Label: 
           default: VariantSpark others parameters
@@ -186,6 +186,8 @@ Metadata:
 Conditions: 
   SpotMaster: !Equals [ !Ref MasterNodePricing, Spot ]
   OnDemandMaster: !Equals [ !Ref MasterNodePricing, OnDemand ]
+  IVB: !Equals [ !Ref Biallelic, "True" ]
+  RO: !Equals [ !Ref OOB, "True" ]
 Resources:
   EMRClusterV5:
     Type: AWS::EMR::Cluster
@@ -294,8 +296,8 @@ Resources:
           - Ref: Seed
           - "-on"
           - "100000000"
-          #- Ref: Biallelic
-          #- Ref: OOB
+          - !If [IVB, "-ivb", "-v"]
+          - !If [RO, "-ro", "-v"]
           Jar: "command-runner.jar"
       Tags:
       - Key: Name
@@ -312,3 +314,9 @@ Outputs:
   ClusterID:
     Description: "EMR Cluster ID"
     Value: !Ref "EMRClusterV5"
+  JupyterURL:
+    Description: Jupyter Notebook URL
+    Value: !Sub "https://${EMRClusterV5.MasterPublicDNS}:8888"
+  sshMasterNode:
+    Description: ssh to the master node of cluster
+    Value: !Sub "ssh -i \"${EC2KeyPair}.pem\" hadoop@${EMRClusterV5.MasterPublicDNS}"
